"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-12-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-13:
	  sim/prsim/Expr.h: pul_enum made a true enum, not uchar typedef.
	  sim/prsim/State-prsim.cc: propagate_evaluate():
		when !in_excl_q, and pull turns off, check both the 
		normal AND weak rules of the opposing pull.
		I'm certain this is bug fixed, but have no test case to
		trigger or prove it, unfortunately.  It seems obvious.
		Now updated event reflects strength of pull.
	  Known issue: can get into a state where a node is inconsistent
		with its fanins, i.e. not right value and not
		enqueued with firing to correct value.


2007-12-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-12:
	  New prsim mode switch: PRSIM_ALLOW_OVERTAKE_EVENTS:
		Allow events with known values to overtake pending
		X-events (preserving monotonicity) in the unstable-dequeue
		mode, to further accommodate synchronous circuit
		simulation.  New test cases added.


2007-12-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-11:
	  VPI-hacprsim works on basic test case (hurray!)
		Lesson: call initialize first!
		TODO: compose some basic test case with vcs -> simv
	  Factored out some useful functions from sim/prsim/Command-prsim.cc
		into Command-prsim-export.cc (for lack of better name).


2007-12-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-10:
	  prsim: print which events are weak in output
		Added some debugging code, updated TODO list.
		Added new test case with different behavior from reference.


2007-12-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-09: