@@ -8,6 +8,8 @@ precharge
 	20	_pchg : 1
 experimenting... 
 time: 20
+WARNING: weak-interference `_bl'
+>> cause: `wlx' (val: 1)
 	20	wlx : 1
 event queue:
 	30	_bl : X	[from wlx:=1]	(weak)
